--- a/WenElevating.Resources/SvgXamlResources.xaml
+++ b/WenElevating.Resources/SvgXamlResources.xaml
@@ -528,6 +528,7 @@
         </DrawingImage.Drawing>
     </DrawingImage>
 
+    <!--  笔记列表-明天  -->
     <DrawingImage x:Key="Todo_NoteList_Tomorrow">
         <DrawingImage.Drawing>
             <DrawingGroup ClipGeometry="M0,0 V1024 H1024 V0 H0 Z">
@@ -540,6 +541,7 @@
         </DrawingImage.Drawing>
     </DrawingImage>
 
+    <!--  笔记列表-指派给我  -->
     <DrawingImage x:Key="Todo_NoteList_Assigned">
         <DrawingImage.Drawing>
             <DrawingGroup ClipGeometry="M0,0 V1024 H1024 V0 H0 Z">
@@ -551,6 +553,7 @@
         </DrawingImage.Drawing>
     </DrawingImage>
 
+    <!--  笔记列表-最近7天  -->
     <DrawingImage x:Key="Todo_NoteList_LastSevenDays">
         <DrawingImage.Drawing>
             <DrawingGroup ClipGeometry="M0,0 V1024 H1024 V0 H0 Z">
@@ -561,6 +564,7 @@
         </DrawingImage.Drawing>
     </DrawingImage>
 
+    <!--  笔记列表-所有  -->
     <DrawingImage x:Key="Todo_NoteList_Summary">
         <DrawingImage.Drawing>
             <DrawingGroup ClipGeometry="M0,0 V1024 H1024 V0 H0 Z">
@@ -568,6 +572,33 @@
                 <GeometryDrawing Brush="{DynamicResource IconBrush}" Geometry="F1 M1024,1024z M0,0z M804,966L215,966C185.8,966,162,942.2,162,913L162,119C162,89.8,185.8,66,215,66L256,66C268.7,66 279,76.3 279,89 279,101.7 268.7,112 256,112L215,112C211.1,112,208,115.1,208,119L208,913C208,916.9,211.1,920,215,920L804,920C807.9,920,811,916.9,811,913L811,288.5 609.3,112 426,112C413.3,112 403,101.7 403,89 403,76.3 413.3,66 426,66L618,66C623.6,66,629,68,633.1,71.7L849.1,260.7C854.1,265.1,857,271.4,857,278L857,913C857,942.2,833.2,966,804,966z M364.9,112L325.9,112C313.2,112 302.9,101.7 302.9,89 302.9,76.3 313.2,66 325.9,66L364.9,66C377.6,66 387.9,76.3 387.9,89 387.9,101.7 377.6,112 364.9,112z" />
                 <GeometryDrawing Brush="{DynamicResource IconBrush}" Geometry="F1 M1024,1024z M0,0z M307,372L720,372C728.3,372 735,378.7 735,387 735,395.3 728.3,402 720,402L307,402C298.7,402 292,395.3 292,387 292,378.7 298.7,372 307,372z M307,498L720,498C728.3,498 735,504.7 735,513 735,521.3 728.3,528 720,528L307,528C298.7,528 292,521.3 292,513 292,504.7 298.7,498 307,498z M307,624L720,624C728.3,624 735,630.7 735,639 735,647.3 728.3,654 720,654L307,654C298.7,654 292,647.3 292,639 292,630.7 298.7,624 307,624z M307,750L720,750C728.3,750 735,756.7 735,765 735,773.3 728.3,780 720,780L307,780C298.7,780 292,773.3 292,765 292,756.7 298.7,750 307,750z M307,246L538,246C546.3,246 553,252.7 553,261 553,269.3 546.3,276 538,276L307,276C298.7,276 292,269.3 292,261 292,252.7 298.7,246 307,246z" />
                 <GeometryDrawing Brush="{DynamicResource IconBrush}" Geometry="F1 M1024,1024z M0,0z M610,481L681,481C688.7,481,695,487.3,695,495L695,530C695,537.7,688.7,544,681,544L610,544C602.3,544,596,537.7,596,530L596,495C596,487.3,602.3,481,610,481z M346,734L417,734C424.7,734,431,740.3,431,748L431,783C431,790.7,424.7,797,417,797L346,797C338.3,797,332,790.7,332,783L332,748C332,740.3,338.3,734,346,734z M346,230L417,230C424.7,230,431,236.3,431,244L431,279C431,286.7,424.7,293,417,293L346,293C338.3,293,332,286.7,332,279L332,244C332,236.3,338.3,230,346,230z" />
+            </DrawingGroup>
+        </DrawingImage.Drawing>
+    </DrawingImage>
+
+    <!--  笔记列表-折叠  -->
+    <DrawingImage x:Key="Todo_NoteList_Flod">
+        <DrawingImage.Drawing>
+            <DrawingGroup ClipGeometry="M0,0 V1024 H1024 V0 H0 Z">
+                <GeometryDrawing Brush="{DynamicResource TaskPageIconBursh}" Geometry="F1 M1024,1024z M0,0z M867.1,141.17L156.08,141.17C138.41,141.17 124.08,155.5 124.08,173.17 124.08,190.84 138.41,205.17 156.08,205.17L867.1,205.17C884.77,205.17 899.1,190.84 899.1,173.17 899.1,155.5 884.77,141.17 867.1,141.17z M867.92,367.52L403.2,367.52C385.53,367.52 371.2,381.85 371.2,399.52 371.2,417.19 385.53,431.52 403.2,431.52L867.93,431.52C885.6,431.52 899.93,417.19 899.93,399.52 899.93,381.85 885.6,367.52 867.92,367.52z M867.92,573.87L403.2,573.87C385.53,573.87 371.2,588.2 371.2,605.87 371.2,623.54 385.53,637.87 403.2,637.87L867.93,637.87C885.6,637.87 899.93,623.54 899.93,605.87 899.93,588.2 885.6,573.87 867.92,573.87z M867.92,800.22L156.9,800.22C139.23,800.22 124.9,814.55 124.9,832.22 124.9,849.89 139.23,864.22 156.9,864.22L867.92,864.22C885.59,864.22 899.92,849.89 899.92,832.22 899.92,814.54 885.6,800.22 867.92,800.22z M312.01,367.52L312.01,637.87 137.47,489.71z" />
+            </DrawingGroup>
+        </DrawingImage.Drawing>
+    </DrawingImage>
+
+    <!--  笔记列表-展开  -->
+    <DrawingImage x:Key="Todo_NoteList_Expand">
+        <DrawingImage.Drawing>
+            <DrawingGroup ClipGeometry="M0,0 V1024 H1024 V0 H0 Z">
+                <GeometryDrawing Brush="{DynamicResource TaskPageIconBursh}" Geometry="F1 M1024,1024z M0,0z M867.1,141.17L156.08,141.17C138.41,141.17 124.08,155.5 124.08,173.17 124.08,190.84 138.41,205.17 156.08,205.17L867.1,205.17C884.77,205.17 899.1,190.84 899.1,173.17 899.1,155.5 884.77,141.17 867.1,141.17z M867.92,367.52L403.2,367.52C385.53,367.52 371.2,381.85 371.2,399.52 371.2,417.19 385.53,431.52 403.2,431.52L867.93,431.52C885.6,431.52 899.93,417.19 899.93,399.52 899.93,381.85 885.6,367.52 867.92,367.52z M867.92,573.87L403.2,573.87C385.53,573.87 371.2,588.2 371.2,605.87 371.2,623.54 385.53,637.87 403.2,637.87L867.93,637.87C885.6,637.87 899.93,623.54 899.93,605.87 899.93,588.2 885.6,573.87 867.92,573.87z M867.92,800.22L156.9,800.22C139.23,800.22 124.9,814.55 124.9,832.22 124.9,849.89 139.23,864.22 156.9,864.22L867.92,864.22C885.59,864.22 899.92,849.89 899.92,832.22 899.92,814.54 885.6,800.22 867.92,800.22z M137.47,637.87L137.47,367.52 312.01,515.67z" />
+            </DrawingGroup>
+        </DrawingImage.Drawing>
+    </DrawingImage>
+
+    <!--  笔记列表-排序  -->
+    <DrawingImage x:Key="Todo_NoteList_Sort">
+        <DrawingImage.Drawing>
+            <DrawingGroup ClipGeometry="M0,0 V1024 H1024 V0 H0 Z">
+                <GeometryDrawing Brush="{DynamicResource IconBrush}" Geometry="F1 M1024,1024z M0,0z M672,896L608,896 608,128 672,128 672,792 864,576 896,640 672,896z M352,232L160,448 128,384 352,128 416,128 416,896 352,896 352,232z" />
             </DrawingGroup>
         </DrawingImage.Drawing>
     </DrawingImage>
